BC-578: unit test fix. (#368)